fix: foto url eliminada
